--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
     sdk: flutter
   webview_flutter: ^2.0.13
   js: ^0.6.2
+  image_picker: ^0.8.4+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_screenutil: ^5.9.0
+  get: ^4.6.6
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
